--- a/notebooks/online/online optimization.ipynb
+++ b/notebooks/online/online optimization.ipynb
@@ -391,12 +391,90 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "!ls"
+      "!git add online\\ optimization.ipynb"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": "*"
+     "prompt_number": 3
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "!git commit -m \"updating online optimization\""
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[master 93b62f3] updating online optimization\r\n",
+        " Committer: Ubuntu <ubuntu@domU-12-31-39-0C-69-CA.compute-1.internal>\r\n",
+        "Your name and email address were configured automatically based\r\n",
+        "on your username and hostname. Please check that they are accurate.\r\n",
+        "You can suppress this message by setting them explicitly:\r\n",
+        "\r\n",
+        "    git config --global user.name \"Your Name\"\r\n",
+        "    git config --global user.email you@example.com\r\n",
+        "\r\n",
+        "After doing this, you may fix the identity used for this commit with:\r\n",
+        "\r\n",
+        "    git commit --amend --reset-author\r\n",
+        "\r\n",
+        " 1 file changed, 333 insertions(+), 7 deletions(-)\r\n"
+       ]
+      }
+     ],
+     "prompt_number": 4
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "!git push"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Username for 'https://github.com': "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "^C\r\n"
+       ]
+      }
+     ],
+     "prompt_number": 5
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "%%sh\n",
+      "git push"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "fatal: could not read Username for 'https://github.com': No such device or address\n"
+       ]
+      }
+     ],
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
