Adding several files.

--- a/notebooks/docs/TheReviewProcess.ipynb
+++ b/notebooks/docs/TheReviewProcess.ipynb
@@ -17,8 +17,8 @@
       "\n",
       "1. Review and deepen the material learned in class.\n",
       "1. Exercise programming: numpy, scipy, Pandas, iPython notebooks, AWS, git etc.\n",
-      "1. Make a convincing argument in english.\n",
-      "1. Give each other constructive criticism.\n",
+      "1. ** Writing a clear and convincing argument in english. **\n",
+      "1. Give constructive criticism.\n",
       "1. Effectively improve each other's work.\n",
       "\n",
       "#### The Review process will be as follows\n",
@@ -104,7 +104,7 @@
       "\n",
       "At this point you can open the reviewed student's notebook in your browser by running the command \n",
       "\n",
-      "1. `LaunchNotebookServer.py -e <explicit path>` - where `<explicit path>` is the path of the directory where you have the notebook file (relative to `/home/ubuntu`) **this is not working yet, it will work by tomorrow morning**\n",
+      "1. `LaunchNotebookServer.py -e <explicit path>` - where `<explicit path>` is the path of the directory where you have the notebook file (relative to `/home/ubuntu`) **this is not working yet, it will work by wed. morning**\n",
       "1. You can add your review cells to the notebook. \n",
       "1. Remember that you need to coordinate your reviews with the other reviewer. You can do that by performing `add/commit/fetch/merge/push` frequently. You can also use email or even meet face to face!\n",
       "\n",
