Cleaning up the notebooks directory

--- a/notebooks/eigenfaces/EigenFaces.ipynb
+++ b/notebooks/eigenfaces/EigenFaces.ipynb
@@ -26,7 +26,8 @@
      "input": [
       "!pwd \n",
       "Data_Dir='/home/ubuntu/UCSD_BigData/data/CroppedYale'\n",
-      "!ls $Data_Dir"
+      "!ls $Data_Dir\n",
+      "!ls yaleB01/"
      ],
      "language": "python",
      "metadata": {},
@@ -48,9 +49,16 @@
         "yaleB04  yaleB09  yaleB15  yaleB20  yaleB25  yaleB30  yaleB35\r\n",
         "yaleB05  yaleB10  yaleB16  yaleB21  yaleB26  yaleB31  yaleB36\r\n"
        ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "ls: cannot access yaleB01/: No such file or directory\r\n"
+       ]
       }
      ],
-     "prompt_number": 2
+     "prompt_number": 1
     },
     {
      "cell_type": "markdown",
