updated mrjob and weather.mapreduce notebooks

--- a/notebooks/mrjob/Jobs_and_runners.ipynb
+++ b/notebooks/mrjob/Jobs_and_runners.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:7b7dfe713d88042b4f2262d243b6e854043f274161cddbe9312fd2b788ac9515"
+  "signature": "sha256:c653810cd6e36b42486112e2e009ce79609729a7bf6ce918b9b2d109c7148fe4"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -12,21 +12,34 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "root_dir = '/home/ubuntu/packages/mrjob'\n",
+      "#root_dir = '/home/ubuntu/packages/mrjob'\n",
+      "root_dir = '~/BigData/mrjob/'\n",
       "examples_dir=root_dir+'/examples/'\n",
+      "!ls $examples_dir\n",
       "from mrjob.job import MRJob"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 7
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "__init__.py             mr_grep.py              mr_next_word_stats.py   \u001b[34mmr_travelling_salesman\u001b[m\u001b[m  py3k_word_freq_count.py\r\n",
+        "\u001b[34mbash_wrap\u001b[m\u001b[m               mr_jar_step_example.py  mr_page_rank.py         mr_wc.py\r\n",
+        "\u001b[34mcontrib\u001b[m\u001b[m                 mr_log_sampler.py       \u001b[34mmr_postfix_bounce\u001b[m\u001b[m       \u001b[31mmr_wc.rb\u001b[m\u001b[m\r\n",
+        "mr_cmd.py               \u001b[31mmr_most_used_word.py\u001b[m\u001b[m    mr_text_classifier.py   \u001b[31mmr_word_freq_count.py\u001b[m\u001b[m\r\n"
+       ]
+      }
+     ],
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
       "#This notebook should be run AFTER the notebook \"Simple use of mrjob\"\n",
-      "%load mr_word_freq_count.py"
+      "%load $examples_dir/mr_word_freq_count.py"
      ],
      "language": "python",
      "metadata": {},
@@ -112,11 +125,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Overwriting mr_word_freq_counters.py\n"
+        "Writing mr_word_freq_counters.py\n"
        ]
       }
      ],
-     "prompt_number": 12
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -131,16 +144,9 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "no configs found; falling back on auto-configuration\r\n",
-        "no configs found; falling back on auto-configuration\r\n",
-        "creating tmp directory /tmp/mr_word_freq_counters.ubuntu.20140507.180400.653399\r\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "writing to /tmp/mr_word_freq_counters.ubuntu.20140507.180400.653399/step-0-mapper_part-00000\r\n"
+        "using configs in /Users/yoavfreund/.mrjob.conf\r\n",
+        "creating tmp directory /var/folders/80/c2kfvdvx5cx570r4vlzqgb840000gq/T/mr_word_freq_counters.yoavfreund.20140507.194357.295631\r\n",
+        "writing to /var/folders/80/c2kfvdvx5cx570r4vlzqgb840000gq/T/mr_word_freq_counters.yoavfreund.20140507.194357.295631/step-0-mapper_part-00000\r\n"
        ]
       },
       {
@@ -151,27 +157,21 @@
         "  MrJob Counters:\r\n",
         "    combiner: 254\r\n",
         "    mapper: 139\r\n",
-        "writing to /tmp/mr_word_freq_counters.ubuntu.20140507.180400.653399/step-0-mapper-sorted\r\n",
-        "> sort /tmp/mr_word_freq_counters.ubuntu.20140507.180400.653399/step-0-mapper_part-00000\r\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "writing to /tmp/mr_word_freq_counters.ubuntu.20140507.180400.653399/step-0-reducer_part-00000\r\n",
+        "writing to /var/folders/80/c2kfvdvx5cx570r4vlzqgb840000gq/T/mr_word_freq_counters.yoavfreund.20140507.194357.295631/step-0-mapper-sorted\r\n",
+        "> sort /var/folders/80/c2kfvdvx5cx570r4vlzqgb840000gq/T/mr_word_freq_counters.yoavfreund.20140507.194357.295631/step-0-mapper_part-00000\r\n",
+        "writing to /var/folders/80/c2kfvdvx5cx570r4vlzqgb840000gq/T/mr_word_freq_counters.yoavfreund.20140507.194357.295631/step-0-reducer_part-00000\r\n",
         "Counters from step 1:\r\n",
         "  MrJob Counters:\r\n",
         "    combiner: 254\r\n",
         "    mapper: 139\r\n",
         "    reducer: 254\r\n",
-        "Moving /tmp/mr_word_freq_counters.ubuntu.20140507.180400.653399/step-0-reducer_part-00000 -> /tmp/mr_word_freq_counters.ubuntu.20140507.180400.653399/output/part-00000\r\n",
-        "Streaming final output from /tmp/mr_word_freq_counters.ubuntu.20140507.180400.653399/output\r\n",
-        "removing tmp directory /tmp/mr_word_freq_counters.ubuntu.20140507.180400.653399\r\n"
+        "Moving /var/folders/80/c2kfvdvx5cx570r4vlzqgb840000gq/T/mr_word_freq_counters.yoavfreund.20140507.194357.295631/step-0-reducer_part-00000 -> /var/folders/80/c2kfvdvx5cx570r4vlzqgb840000gq/T/mr_word_freq_counters.yoavfreund.20140507.194357.295631/output/part-00000\r\n",
+        "Streaming final output from /var/folders/80/c2kfvdvx5cx570r4vlzqgb840000gq/T/mr_word_freq_counters.yoavfreund.20140507.194357.295631/output\r\n",
+        "removing tmp directory /var/folders/80/c2kfvdvx5cx570r4vlzqgb840000gq/T/mr_word_freq_counters.yoavfreund.20140507.194357.295631\r\n"
        ]
       }
      ],
-     "prompt_number": 55
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -186,25 +186,18 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "no configs found; falling back on auto-configuration\r\n",
-        "no configs found; falling back on auto-configuration\r\n",
-        "creating tmp directory /tmp/mr_word_freq_counters.ubuntu.20140507.180411.446750\r\n"
+        "using configs in /Users/yoavfreund/.mrjob.conf\r\n",
+        "creating tmp directory /var/folders/80/c2kfvdvx5cx570r4vlzqgb840000gq/T/mr_word_freq_counters.yoavfreund.20140507.194401.486567\r\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "writing to /tmp/mr_word_freq_counters.ubuntu.20140507.180411.446750/step-0-mapper_part-00000\r\n",
-        "> /home/ubuntu/anaconda/bin/python mr_word_freq_counters.py --step-num=0 --mapper /tmp/mr_word_freq_counters.ubuntu.20140507.180411.446750/input_part-00000 | sort | /home/ubuntu/anaconda/bin/python mr_word_freq_counters.py --step-num=0 --combiner > /tmp/mr_word_freq_counters.ubuntu.20140507.180411.446750/step-0-mapper_part-00000\r\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "writing to /tmp/mr_word_freq_counters.ubuntu.20140507.180411.446750/step-0-mapper_part-00001\r\n",
-        "> /home/ubuntu/anaconda/bin/python mr_word_freq_counters.py --step-num=0 --mapper /tmp/mr_word_freq_counters.ubuntu.20140507.180411.446750/input_part-00001 | sort | /home/ubuntu/anaconda/bin/python mr_word_freq_counters.py --step-num=0 --combiner > /tmp/mr_word_freq_counters.ubuntu.20140507.180411.446750/step-0-mapper_part-00001\r\n"
+        "writing to /var/folders/80/c2kfvdvx5cx570r4vlzqgb840000gq/T/mr_word_freq_counters.yoavfreund.20140507.194401.486567/step-0-mapper_part-00000\r\n",
+        "> //anaconda/bin/python mr_word_freq_counters.py --step-num=0 --mapper /var/folders/80/c2kfvdvx5cx570r4vlzqgb840000gq/T/mr_word_freq_counters.yoavfreund.20140507.194401.486567/input_part-00000 | sort | //anaconda/bin/python mr_word_freq_counters.py --step-num=0 --combiner > /var/folders/80/c2kfvdvx5cx570r4vlzqgb840000gq/T/mr_word_freq_counters.yoavfreund.20140507.194401.486567/step-0-mapper_part-00000\r\n",
+        "writing to /var/folders/80/c2kfvdvx5cx570r4vlzqgb840000gq/T/mr_word_freq_counters.yoavfreund.20140507.194401.486567/step-0-mapper_part-00001\r\n",
+        "> //anaconda/bin/python mr_word_freq_counters.py --step-num=0 --mapper /var/folders/80/c2kfvdvx5cx570r4vlzqgb840000gq/T/mr_word_freq_counters.yoavfreund.20140507.194401.486567/input_part-00001 | sort | //anaconda/bin/python mr_word_freq_counters.py --step-num=0 --combiner > /var/folders/80/c2kfvdvx5cx570r4vlzqgb840000gq/T/mr_word_freq_counters.yoavfreund.20140507.194401.486567/step-0-mapper_part-00001\r\n"
        ]
       },
       {
@@ -215,18 +208,12 @@
         "  MrJob Counters:\r\n",
         "    combiner: 304\r\n",
         "    mapper: 139\r\n",
-        "writing to /tmp/mr_word_freq_counters.ubuntu.20140507.180411.446750/step-0-mapper-sorted\r\n",
-        "> sort /tmp/mr_word_freq_counters.ubuntu.20140507.180411.446750/step-0-mapper_part-00000 /tmp/mr_word_freq_counters.ubuntu.20140507.180411.446750/step-0-mapper_part-00001\r\n",
-        "writing to /tmp/mr_word_freq_counters.ubuntu.20140507.180411.446750/step-0-reducer_part-00000\r\n",
-        "> /home/ubuntu/anaconda/bin/python mr_word_freq_counters.py --step-num=0 --reducer /tmp/mr_word_freq_counters.ubuntu.20140507.180411.446750/input_part-00000 > /tmp/mr_word_freq_counters.ubuntu.20140507.180411.446750/step-0-reducer_part-00000\r\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "writing to /tmp/mr_word_freq_counters.ubuntu.20140507.180411.446750/step-0-reducer_part-00001\r\n",
-        "> /home/ubuntu/anaconda/bin/python mr_word_freq_counters.py --step-num=0 --reducer /tmp/mr_word_freq_counters.ubuntu.20140507.180411.446750/input_part-00001 > /tmp/mr_word_freq_counters.ubuntu.20140507.180411.446750/step-0-reducer_part-00001\r\n"
+        "writing to /var/folders/80/c2kfvdvx5cx570r4vlzqgb840000gq/T/mr_word_freq_counters.yoavfreund.20140507.194401.486567/step-0-mapper-sorted\r\n",
+        "> sort /var/folders/80/c2kfvdvx5cx570r4vlzqgb840000gq/T/mr_word_freq_counters.yoavfreund.20140507.194401.486567/step-0-mapper_part-00000 /var/folders/80/c2kfvdvx5cx570r4vlzqgb840000gq/T/mr_word_freq_counters.yoavfreund.20140507.194401.486567/step-0-mapper_part-00001\r\n",
+        "writing to /var/folders/80/c2kfvdvx5cx570r4vlzqgb840000gq/T/mr_word_freq_counters.yoavfreund.20140507.194401.486567/step-0-reducer_part-00000\r\n",
+        "> //anaconda/bin/python mr_word_freq_counters.py --step-num=0 --reducer /var/folders/80/c2kfvdvx5cx570r4vlzqgb840000gq/T/mr_word_freq_counters.yoavfreund.20140507.194401.486567/input_part-00000 > /var/folders/80/c2kfvdvx5cx570r4vlzqgb840000gq/T/mr_word_freq_counters.yoavfreund.20140507.194401.486567/step-0-reducer_part-00000\r\n",
+        "writing to /var/folders/80/c2kfvdvx5cx570r4vlzqgb840000gq/T/mr_word_freq_counters.yoavfreund.20140507.194401.486567/step-0-reducer_part-00001\r\n",
+        "> //anaconda/bin/python mr_word_freq_counters.py --step-num=0 --reducer /var/folders/80/c2kfvdvx5cx570r4vlzqgb840000gq/T/mr_word_freq_counters.yoavfreund.20140507.194401.486567/input_part-00001 > /var/folders/80/c2kfvdvx5cx570r4vlzqgb840000gq/T/mr_word_freq_counters.yoavfreund.20140507.194401.486567/step-0-reducer_part-00001\r\n"
        ]
       },
       {
@@ -238,14 +225,14 @@
         "    combiner: 304\r\n",
         "    mapper: 139\r\n",
         "    reducer: 254\r\n",
-        "Moving /tmp/mr_word_freq_counters.ubuntu.20140507.180411.446750/step-0-reducer_part-00000 -> /tmp/mr_word_freq_counters.ubuntu.20140507.180411.446750/output/part-00000\r\n",
-        "Moving /tmp/mr_word_freq_counters.ubuntu.20140507.180411.446750/step-0-reducer_part-00001 -> /tmp/mr_word_freq_counters.ubuntu.20140507.180411.446750/output/part-00001\r\n",
-        "Streaming final output from /tmp/mr_word_freq_counters.ubuntu.20140507.180411.446750/output\r\n",
-        "removing tmp directory /tmp/mr_word_freq_counters.ubuntu.20140507.180411.446750\r\n"
+        "Moving /var/folders/80/c2kfvdvx5cx570r4vlzqgb840000gq/T/mr_word_freq_counters.yoavfreund.20140507.194401.486567/step-0-reducer_part-00000 -> /var/folders/80/c2kfvdvx5cx570r4vlzqgb840000gq/T/mr_word_freq_counters.yoavfreund.20140507.194401.486567/output/part-00000\r\n",
+        "Moving /var/folders/80/c2kfvdvx5cx570r4vlzqgb840000gq/T/mr_word_freq_counters.yoavfreund.20140507.194401.486567/step-0-reducer_part-00001 -> /var/folders/80/c2kfvdvx5cx570r4vlzqgb840000gq/T/mr_word_freq_counters.yoavfreund.20140507.194401.486567/output/part-00001\r\n",
+        "Streaming final output from /var/folders/80/c2kfvdvx5cx570r4vlzqgb840000gq/T/mr_word_freq_counters.yoavfreund.20140507.194401.486567/output\r\n",
+        "removing tmp directory /var/folders/80/c2kfvdvx5cx570r4vlzqgb840000gq/T/mr_word_freq_counters.yoavfreund.20140507.194401.486567\r\n"
        ]
       }
      ],
-     "prompt_number": 56
+     "prompt_number": 7
     },
     {
      "cell_type": "heading",
