mrjob+EMR+IAM is finally working for the students

--- a/notebooks/weather.mapreduce/weather_MRjob.ipynb
+++ b/notebooks/weather.mapreduce/weather_MRjob.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:227f42a06013ff8a425d34416906f2ed568650c1b893289aa7e34023809cc999"
+  "signature": "sha256:f3fe9ccfca9acc9dc3b615e46f84e607b32057e9f95855900279e3b2ee76bc66"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -21,7 +21,18 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "pandas version:  0.13.1\n",
+        "numpy version: 1.8.0\n",
+        "sklearn version: 0.14.1\n"
+       ]
+      }
+     ],
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -38,8 +49,9 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "ALL.head.csv                SAMPLE_TMAX.csv.old.gz      ghcnd-readme.txt            ghcnd-stations_buffered.txt\r\n",
-        "SAMPLE_TMAX.csv             data-source.txt             ghcnd-stations.txt          ghcnd-version.txt\r\n"
+        "ALL.head.csv                data-source.txt             ghcnd-stations_buffered.txt\r\n",
+        "SAMPLE_TMAX.csv             ghcnd-readme.txt            ghcnd-version.txt\r\n",
+        "SAMPLE_TMAX.csv.old.gz      ghcnd-stations.txt\r\n"
        ]
       },
       {
@@ -50,7 +62,7 @@
        ]
       }
      ],
-     "prompt_number": 40
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -170,7 +182,7 @@
       "stations=pickle.load(open('stations.pkl', 'rb'))\n",
       "!gzip stations.pkl\n",
       "\n",
-      "Days=pickle.load(open('Dates.pkl', 'rb'))\n",
+      "#Days=pickle.load(open('Dates.pkl', 'rb'))\n",
       "\n",
       "stations.head()"
      ],
@@ -257,7 +269,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 20,
+       "prompt_number": 3,
        "text": [
         "             latitude  longitude  elevation state                   name  \\\n",
         "ACW00011604   17.1167   -61.7833       10.1   NaN  ST JOHNS COOLIDGE FLD   \n",
@@ -277,7 +289,7 @@
        ]
       }
      ],
-     "prompt_number": 20
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -393,7 +405,7 @@
        ]
       }
      ],
-     "prompt_number": 53
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -409,8 +421,14 @@
        "stream": "stdout",
        "text": [
         "using configs in /Users/yoavfreund/.mrjob.conf\r\n",
-        "creating tmp directory /var/folders/80/c2kfvdvx5cx570r4vlzqgb840000gq/T/mr_weather.yoavfreund.20140508.031243.844491\r\n",
-        "writing to /var/folders/80/c2kfvdvx5cx570r4vlzqgb840000gq/T/mr_weather.yoavfreund.20140508.031243.844491/step-0-mapper_part-00000\r\n"
+        "creating tmp directory /var/folders/80/c2kfvdvx5cx570r4vlzqgb840000gq/T/mr_weather.yoavfreund.20140508.201508.979166\r\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "writing to /var/folders/80/c2kfvdvx5cx570r4vlzqgb840000gq/T/mr_weather.yoavfreund.20140508.201508.979166/step-0-mapper_part-00000\r\n"
        ]
       },
       {
@@ -421,21 +439,21 @@
         "  MrJob Counters:\r\n",
         "    combiner: 22\r\n",
         "    mapper: 1000\r\n",
-        "writing to /var/folders/80/c2kfvdvx5cx570r4vlzqgb840000gq/T/mr_weather.yoavfreund.20140508.031243.844491/step-0-mapper-sorted\r\n",
-        "> sort /var/folders/80/c2kfvdvx5cx570r4vlzqgb840000gq/T/mr_weather.yoavfreund.20140508.031243.844491/step-0-mapper_part-00000\r\n",
-        "writing to /var/folders/80/c2kfvdvx5cx570r4vlzqgb840000gq/T/mr_weather.yoavfreund.20140508.031243.844491/step-0-reducer_part-00000\r\n",
+        "writing to /var/folders/80/c2kfvdvx5cx570r4vlzqgb840000gq/T/mr_weather.yoavfreund.20140508.201508.979166/step-0-mapper-sorted\r\n",
+        "> sort /var/folders/80/c2kfvdvx5cx570r4vlzqgb840000gq/T/mr_weather.yoavfreund.20140508.201508.979166/step-0-mapper_part-00000\r\n",
+        "writing to /var/folders/80/c2kfvdvx5cx570r4vlzqgb840000gq/T/mr_weather.yoavfreund.20140508.201508.979166/step-0-reducer_part-00000\r\n",
         "Counters from step 1:\r\n",
         "  MrJob Counters:\r\n",
         "    combiner: 22\r\n",
         "    mapper: 1000\r\n",
         "    reducer: 22\r\n",
-        "Moving /var/folders/80/c2kfvdvx5cx570r4vlzqgb840000gq/T/mr_weather.yoavfreund.20140508.031243.844491/step-0-reducer_part-00000 -> /var/folders/80/c2kfvdvx5cx570r4vlzqgb840000gq/T/mr_weather.yoavfreund.20140508.031243.844491/output/part-00000\r\n",
-        "Streaming final output from /var/folders/80/c2kfvdvx5cx570r4vlzqgb840000gq/T/mr_weather.yoavfreund.20140508.031243.844491/output\r\n",
-        "removing tmp directory /var/folders/80/c2kfvdvx5cx570r4vlzqgb840000gq/T/mr_weather.yoavfreund.20140508.031243.844491\r\n"
+        "Moving /var/folders/80/c2kfvdvx5cx570r4vlzqgb840000gq/T/mr_weather.yoavfreund.20140508.201508.979166/step-0-reducer_part-00000 -> /var/folders/80/c2kfvdvx5cx570r4vlzqgb840000gq/T/mr_weather.yoavfreund.20140508.201508.979166/output/part-00000\r\n",
+        "Streaming final output from /var/folders/80/c2kfvdvx5cx570r4vlzqgb840000gq/T/mr_weather.yoavfreund.20140508.201508.979166/output\r\n",
+        "removing tmp directory /var/folders/80/c2kfvdvx5cx570r4vlzqgb840000gq/T/mr_weather.yoavfreund.20140508.201508.979166\r\n"
        ]
       }
      ],
-     "prompt_number": 54
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -482,7 +500,7 @@
      "collapsed": false,
      "input": [
       "#%load $data_dir/ghcnd-readme.txt\n",
-      "#ufter loading - restricted to part that describes the the measurement types"
+      "#after loading - restricted to part that describes the the measurement types"
      ],
      "language": "python",
      "metadata": {},
@@ -640,24 +658,91 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "#plotting values as a function of the day-of-year\n",
-      "dates=[date.fromordinal(i) for i in range(1,366)]\n",
-      "def YearlyPlots(T,ttl='',size=(10,7)):\n",
-      "    fig=plt.figure(1,figsize=size,dpi=300)\n",
-      "    #fig, ax = plt.subplots(1)\n",
-      "    if shape(T)[0] != 365:\n",
-      "        raise ValueError(\"First dimension of T should be 365. Shape(T)=\"+str(shape(T)))\n",
-      "    plot(dates,T);\n",
-      "    # rotate and align the tick labels so they look better\n",
-      "    fig.autofmt_xdate()\n",
-      "    ylabel('temperature')\n",
-      "    grid()\n",
-      "    title(ttl)\n",
-      "YearlyPlots(Data.ix[20:30,1:365].transpose(),ttl='A sample of yearly plots')"
+      "job_flow_id='j-1HFD8T7K9LGVH'\n",
+      "#!python mr_weather.py -r emr  --emr-job-flow-id=$job_flow_id hdfs:/weather/weather.csv > counts\n",
+      "!python mr_weather.py -r emr -c /Users/yoavfreund/BigData/mrjob/Yoav_Student.conf --emr-job-flow-id=$job_flow_id hdfs:/weather/weather.csv > counts\n",
+      "#!python mr_weather.py -r emr -c /Users/yoavfreund/BigData/mrjob/Student_Config --emr-job-flow-id=$job_flow_id hdfs:/weather/weather.csv > counts"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "creating tmp directory /var/folders/80/c2kfvdvx5cx570r4vlzqgb840000gq/T/mr_weather.yoavfreund.20140510.000612.930664\r\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Copying non-input files into s3://yoav.hadoop/scratch/mr_weather.yoavfreund.20140510.000612.930664/files/\r\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Adding our job to existing job flow j-1HFD8T7K9LGVH\r\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Job launched 30.5s ago, status RUNNING: Running step (mr_weather.yoavfreund.20140510.000612.930664: Step 1 of 1)\r\n"
+       ]
+      }
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "!cat counts"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 35
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "!cat /Users/yoavfreund/BigData/mrjob/Student_Config"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "# This is a mrjob cnfiguration file that should work \r\n",
+        "# for the students in the UCSD big data class\r\n",
+        "# \r\n",
+        "runners:\r\n",
+        "  name: Weather_Test\r\n",
+        "  owner: Yoav_Freund\r\n",
+        "  emr:\r\n",
+        "    # Region to connect to S3 and EMR on (e.g. us-west-1).\r\n",
+        "    aws_region: us-east-1\r\n",
+        "    # Availability zone to run the job flow on\r\n",
+        "    aws_availability_zone: us-east-1d\r\n",
+        "    aws_access_key_id: AKIAILCBPY5XVX7KMNRQ\r\n",
+        "    aws_secret_access_key: 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\r\n",
+        "    ec2_key_pair: HadoopKeyPair\r\n",
+        "    ec2_key_pair_file: /Users/yoavfreund/.ssh/HadoopKeyPair.pem\r\n",
+        "    s3_log_uri: s3://yoav.hadoop/logs/\r\n",
+        "    #                    URI on S3 to write logs into\r\n",
+        "    s3_scratch_uri: s3://yoav.hadoop/scratch/\r\n",
+        "    #                    URI on S3 that is used as scratch space\r\n"
+       ]
+      }
+     ],
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
