--- a/notebooks/weather.mapreduce/mrjob and EMR.ipynb
+++ b/notebooks/weather.mapreduce/mrjob and EMR.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:17afbf3197ee25a1eb5b20196dd4e502d180c3ba99c3c2e02bc0db0ee74e7a5e"
+  "signature": "sha256:57421eaccae2f2a4cb691bc872f24bded70b1bf14b53f84025dde8a78844f9d4"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -3089,21 +3089,28 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "root_dir"
+      "!pwd"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 4,
+       "output_type": "stream",
+       "stream": "stdout",
        "text": [
-        "'/Users/yoavfreund/BigData/mrjob'"
+        "/Users/yoavfreund/BigData/UCSD_BigData/notebooks/weather.mapreduce\r\n"
        ]
       }
      ],
-     "prompt_number": 4
+     "prompt_number": 13
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     },
     {
      "cell_type": "code",
