--- a/notebooks/weather.mapreduce/weather_MRjob.ipynb
+++ b/notebooks/weather.mapreduce/weather_MRjob.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:f3fe9ccfca9acc9dc3b615e46f84e607b32057e9f95855900279e3b2ee76bc66"
+  "signature": "sha256:e4ec5feb7630a0143c28b66701392a906d44e1127d87562cce9c169a78629db8"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -660,7 +660,7 @@
      "input": [
       "job_flow_id='j-1HFD8T7K9LGVH'\n",
       "#!python mr_weather.py -r emr  --emr-job-flow-id=$job_flow_id hdfs:/weather/weather.csv > counts\n",
-      "!python mr_weather.py -r emr -c /Users/yoavfreund/BigData/mrjob/Yoav_Student.conf --emr-job-flow-id=$job_flow_id hdfs:/weather/weather.csv > counts\n",
+      "!python mr_weather.py -r emr -c /Users/yoavfreund/BigData/mrjob/Student_Config --emr-job-flow-id=$job_flow_id hdfs:/weather/weather.csv > counts\n",
       "#!python mr_weather.py -r emr -c /Users/yoavfreund/BigData/mrjob/Student_Config --emr-job-flow-id=$job_flow_id hdfs:/weather/weather.csv > counts"
      ],
      "language": "python",
@@ -670,14 +670,14 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "creating tmp directory /var/folders/80/c2kfvdvx5cx570r4vlzqgb840000gq/T/mr_weather.yoavfreund.20140510.000612.930664\r\n"
+        "creating tmp directory /var/folders/80/c2kfvdvx5cx570r4vlzqgb840000gq/T/mr_weather.yoavfreund.20140510.001457.462577\r\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Copying non-input files into s3://yoav.hadoop/scratch/mr_weather.yoavfreund.20140510.000612.930664/files/\r\n"
+        "Copying non-input files into s3://yoav.hadoop/scratch/mr_weather.yoavfreund.20140510.001457.462577/files/\r\n"
        ]
       },
       {
@@ -691,10 +691,109 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Job launched 30.5s ago, status RUNNING: Running step (mr_weather.yoavfreund.20140510.000612.930664: Step 1 of 1)\r\n"
+        "Job launched 30.5s ago, status RUNNING: Running step (mr_weather.yoavfreund.20140510.001457.462577: Step 1 of 1)\r\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Job launched 61.0s ago, status RUNNING: Running step (mr_weather.yoavfreund.20140510.001457.462577: Step 1 of 1)\r\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Job launched 91.6s ago, status RUNNING: Running step (mr_weather.yoavfreund.20140510.001457.462577: Step 1 of 1)\r\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Job launched 122.1s ago, status RUNNING: Running step (mr_weather.yoavfreund.20140510.001457.462577: Step 1 of 1)\r\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Job launched 152.5s ago, status RUNNING: Running step (mr_weather.yoavfreund.20140510.001457.462577: Step 1 of 1)\r\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Job completed.\r\n",
+        "Running time was 134.0s (not counting time spent waiting for the EC2 instances)\r\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Fetching counters from SSH...\r\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Counters from step 1:\r\n",
+        "  File Input Format Counters :\r\n",
+        "    Bytes Read: 7670826853\r\n",
+        "  File Output Format Counters :\r\n",
+        "    Bytes Written: 1529\r\n",
+        "  FileSystemCounters:\r\n",
+        "    FILE_BYTES_READ: 25104\r\n",
+        "    FILE_BYTES_WRITTEN: 1975972\r\n",
+        "    HDFS_BYTES_READ: 7670832733\r\n",
+        "    S3_BYTES_WRITTEN: 1529\r\n",
+        "  Job Counters :\r\n",
+        "    Data-local map tasks: 59\r\n",
+        "    Launched map tasks: 61\r\n",
+        "    Launched reduce tasks: 12\r\n",
+        "    Rack-local map tasks: 2\r\n",
+        "    SLOTS_MILLIS_MAPS: 2299255\r\n",
+        "    SLOTS_MILLIS_REDUCES: 280844\r\n",
+        "    Total time spent by all maps waiting after reserving slots (ms): 0\r\n",
+        "    Total time spent by all reduces waiting after reserving slots (ms): 0\r\n",
+        "  Map-Reduce Framework:\r\n",
+        "    CPU time spent (ms): 1066500\r\n",
+        "    Combine input records: 9358394\r\n",
+        "    Combine output records: 5078\r\n",
+        "    Map input bytes: 7668888728\r\n",
+        "    Map input records: 9358394\r\n",
+        "    Map output bytes: 84225546\r\n",
+        "    Map output materialized bytes: 68458\r\n",
+        "    Map output records: 9358394\r\n",
+        "    Physical memory (bytes) snapshot: 29502435328\r\n",
+        "    Reduce input groups: 133\r\n",
+        "    Reduce input records: 5078\r\n",
+        "    Reduce output records: 133\r\n",
+        "    Reduce shuffle bytes: 68458\r\n",
+        "    SPLIT_RAW_BYTES: 5880\r\n",
+        "    Spilled Records: 10156\r\n",
+        "    Total committed heap usage (bytes): 28353495040\r\n",
+        "    Virtual memory (bytes) snapshot: 126861185024\r\n",
+        "  MrJob Counters:\r\n",
+        "    mapper: 9358394\r\n",
+        "    reducer: 133\r\n",
+        "Streaming final output from s3://yoav.hadoop/scratch/mr_weather.yoavfreund.20140510.001457.462577/output/\r\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "removing tmp directory /var/folders/80/c2kfvdvx5cx570r4vlzqgb840000gq/T/mr_weather.yoavfreund.20140510.001457.462577\r\n",
+        "Removing all files in s3://yoav.hadoop/scratch/mr_weather.yoavfreund.20140510.001457.462577/\r\n"
        ]
       }
-     ]
+     ],
+     "prompt_number": 37
     },
     {
      "cell_type": "code",
